Fixed responsivness on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,12 @@ body {
         gap: 20px;
         padding: 2rem;
 
+        .restart-btns {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+
         @media (min-width: 768px) and (max-width: 1023px) {
             padding: 10rem;
         }
